# irename-rs

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  lib.rs  main.rs  path_utils.rs
