[package]
name = "irename"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/ddaletski/irename-rs"
license = "MIT"
description = "interactive file renaming tool"
keywords = ["cli", "tui", "terminal", "regex"]

[dependencies]
anyhow = "1.0.60"
bitflags = "1.3.2"
clap = { version = "3.2.16", features = ["derive"] }
lazy_static = "1.4.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
regex = "1.6.0"
termion = "1.5.6"
tui = { version = "0.18.0", features = ["termion"] }
variant_count = "1.1.0"


[dev-dependencies]
proptest = "1.0.0"
rstest = "0.15.0"
